update link img

--- a/CodeCrafted/index.html
+++ b/CodeCrafted/index.html
@@ -32,20 +32,14 @@
     <div class="slideshow" id="slide">
       <!-- test video đầu hẹ hẹ hẹ -->
       <video
-        src="/CodeCrafted/assets/image/slide-show-1.mp4"
+        src="./assets/image/slide-show-1.mp4"
         class="slideshow__slide active"
         muted
         autoplay
         playsinline
       ></video>
-      <img
-        src="/CodeCrafted/assets/image/slide-show-2.jpeg"
-        class="slideshow__slide"
-      />
-      <img
-        src="/CodeCrafted/assets/image/slide-show-3.webp"
-        class="slideshow__slide"
-      />
+      <img src="./assets/image/slide-show-2.jpeg" class="slideshow__slide" />
+      <img src="./assets/image/slide-show-3.webp" class="slideshow__slide" />
 
       <!-- Nút điều hướng slideshow -->
       <a class="slideshow__control slideshow__control--prev">
