fix logicbug JS 1 chút slideshow-chưa hoàn thành

--- a/CodeCrafted/index.html
+++ b/CodeCrafted/index.html
@@ -26,7 +26,9 @@
           <li class="menu-courses dropdown-wrapper">
             <a href="#" class="nav__link">Khoá học</a>
             <ul class="dropdown">
-              <li class="dropdown-item"><a href="#">Lập Trình Web</a></li>
+              <li class="dropdown-item">
+                <a href="./khoahoc_laptrinhweb.html">Lập Trình Web</a>
+              </li>
               <li class="dropdown-item"><a href="#">Phân Tích Dữ Liệu</a></li>
               <li class="dropdown-item"><a href="#">Thiết Kế UI/UX</a></li>
               <li class="dropdown-item"><a href="#">JS Căn Bản</a></li>
@@ -70,6 +72,7 @@
         muted
         autoplay
         playsinline
+        loop
       ></video>
       <img src="./assets/image/slide-show-2.jpeg" class="slideshow__slide" />
       <img src="./assets/image/slide-show-3.webp" class="slideshow__slide" />
