--- a/CodeCrafted/index.html
+++ b/CodeCrafted/index.html
@@ -208,7 +208,30 @@
 
     <!-- Chân trang -->
     <footer class="footer">
-      <p class="footer__credit">BY Du Tuan Kiet</p>
+      <div class="footer__content">
+        <p class="footer__credit">BY Du Tuan Kiet</p>
+        <p class="footer__follow">Follow us</p>
+        <div class="footer__socials">
+          <a
+            href="https://www.facebook.com/kiet.hi.980"
+            target="_blank"
+            aria-label="Facebook"
+          >
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+              alt="Facebook"
+              class="footer__social-icon"
+            />
+          </a>
+          <a href="#" target="_blank" aria-label="Instagram">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
+              alt="Instagram"
+              class="footer__social-icon"
+            />
+          </a>
+        </div>
+      </div>
     </footer>
 
     <!-- Modal đăng nhập/đăng ký -->
