Bổ sung thêm trang Giới thiệu, fix 1 số lỗi giao diện header

--- a/khoahoc_laptrinhweb.html
+++ b/khoahoc_laptrinhweb.html
@@ -20,7 +20,7 @@
     <header class="header" id="mainHeader">
       <h1 class="header__title">CodeCrafted</h1>
       <nav class="header__nav">
-        <a href="index.html" class="nav__link" id="homeLink">Trang chủ</a>
+        <a href="index.html#" class="nav__link" id="homeLink">Trang chủ</a>
         <ul class="nav__list">
           <li class="menu-courses dropdown-wrapper">
             <a href="#" class="nav__link">Khoá học</a>
@@ -33,15 +33,29 @@
               <li class="dropdown-item"><a href="#">Tư Duy Lập Trình</a></li>
             </ul>
           </li>
+
           <li class="menu-intro">
             <a href="#" class="nav__link">Giới thiệu</a>
             <ul class="dropdown">
-              <li class="dropdown-item"><a href="#">Sứ mệnh & Giá trị</a></li>
-              <li class="dropdown-item"><a href="#">Đội ngũ giảng viên</a></li>
-              <li class="dropdown-item"><a href="#">Học viên tiêu biểu</a></li>
-              <li class="dropdown-item"><a href="#">Blog công nghệ</a></li>
+              <li class="dropdown-item">
+                <a href="./Gioithieu.html#section-mission">Sứ mệnh & Giá trị</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="./Gioithieu.html#section-teachers">
+                  Đội ngũ giảng viên
+                </a>
+              </li>
+              <li class="dropdown-item">
+                <a href="./Gioithieu.html#section-students">
+                  Học viên tiêu biểu
+                </a>
+              </li>
+              <li class="dropdown-item">
+                <a href="./Gioithieu.html#section-blog">Blog công nghệ</a>
+              </li>
             </ul>
           </li>
+
           <li class="menu-contact">
             <a href="#" class="nav__link">Hỗ trợ</a>
             <ul class="dropdown">
