--- a/index.html
+++ b/index.html
@@ -42,12 +42,22 @@
           <li class="menu-intro">
             <a href="#" class="nav__link">Giới thiệu</a>
             <ul class="dropdown">
-              <li class="dropdown-item"><a href="#">Sứ mệnh & Giá trị</a></li>
-              <li class="dropdown-item"><a href="#">Đội ngũ giảng viên</a></li>
               <li class="dropdown-item">
-                <a href="#">Học viên tiêu biểu</a>
+                <a href="./Gioithieu.html#section-mission">Sứ mệnh & Giá trị</a>
               </li>
-              <li class="dropdown-item"><a href="#">Blog công nghệ</a></li>
+              <li class="dropdown-item">
+                <a href="./Gioithieu.html#section-teachers">
+                  Đội ngũ giảng viên
+                </a>
+              </li>
+              <li class="dropdown-item">
+                <a href="./Gioithieu.html#section-students">
+                  Học viên tiêu biểu
+                </a>
+              </li>
+              <li class="dropdown-item">
+                <a href="./Gioithieu.html#section-blog">Blog công nghệ</a>
+              </li>
             </ul>
           </li>
 
@@ -62,6 +72,7 @@
           </li>
         </ul>
         <button id="authBtn" class="btn btn--login">Đăng nhập</button>
+        <div id="authContainer" style="display: inline-block"></div>
       </nav>
     </header>
 
@@ -263,3 +274,44 @@
     <div id="authContainer"></div>
   </body>
 </html>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    fetch("auth/check-session.php")
+      .then((res) => res.json())
+      .then((data) => {
+        console.log("Dữ liệu session nhận được:", data);
+
+        const authBtn = document.getElementById("authBtn");
+        const authContainer = document.getElementById("authContainer");
+
+        if (data.loggedIn) {
+          console.log("Đã đăng nhập, đang hiển thị Hi username");
+
+          // Ẩn nút đăng nhập nếu có
+          if (authBtn) authBtn.style.display = "none";
+
+          // Tạo dòng chữ Hi username
+          const welcomeText = document.createElement("span");
+          welcomeText.textContent = `Hi, ${data.username}`;
+          welcomeText.style.color = "white";
+          welcomeText.style.marginLeft = "1rem";
+          welcomeText.style.fontWeight = "bold";
+          authContainer.appendChild(welcomeText);
+
+          // Tạo nút logout
+          const logoutBtn = document.createElement("button");
+          logoutBtn.textContent = "Logout";
+          logoutBtn.style.marginLeft = "1rem";
+          logoutBtn.onclick = () => {
+            fetch("auth/logout.php").then(() => {
+              window.location.reload(); // hoặc chuyển trang về login
+            });
+          };
+          authContainer.appendChild(logoutBtn);
+        } else {
+          console.log("Chưa đăng nhập");
+        }
+      })
+      .catch((error) => console.error("Lỗi check session:", error));
+  });
+</script>
