updated  Gioithieu.html

--- a/Gioithieu.html
+++ b/Gioithieu.html
@@ -15,9 +15,7 @@
     <header class="header" id="mainHeader">
       <h1 class="header__title">CodeCrafted</h1>
       <nav class="header__nav">
-        <a href="./index.html#home" class="nav__link" id="homeLink">
-          Trang chủ
-        </a>
+        <a href="./index.html#" class="nav__link" id="homeLink">Trang chủ</a>
 
         <ul class="nav__list">
           <li class="menu-courses dropdown-wrapper">
@@ -35,25 +33,7 @@
           </li>
 
           <li class="menu-intro">
-            <a href="#" class="nav__link">Giới thiệu</a>
-            <ul class="dropdown">
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-mission">Sứ mệnh & Giá trị</a>
-              </li>
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-teachers">
-                  Đội ngũ giảng viên
-                </a>
-              </li>
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-students">
-                  Học viên tiêu biểu
-                </a>
-              </li>
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-blog">Blog công nghệ</a>
-              </li>
-            </ul>
+            <a href="./Gioithieu.html" class="nav__link">Giới thiệu</a>
           </li>
 
           <li class="menu-contact">
@@ -92,13 +72,13 @@
 
       <!-- Giới thiệu chung -->
       <section class="section section-intro">
-        <div class="intro-image">
+        <div class="intro-image show-left">
           <img
             src="./assets/image/about-header.png"
             alt="Hình minh họa e-learning"
           />
         </div>
-        <div class="intro-content">
+        <div class="intro-content show-right">
           <h2>
             <span class="highlight-text">CodeCrafted</span>
             – Hệ thống quản lý khóa học trực tuyến
