--- a/khoahoc_laptrinhweb.html
+++ b/khoahoc_laptrinhweb.html
@@ -35,25 +35,7 @@
           </li>
 
           <li class="menu-intro">
-            <a href="#" class="nav__link">Giới thiệu</a>
-            <ul class="dropdown">
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-mission">Sứ mệnh & Giá trị</a>
-              </li>
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-teachers">
-                  Đội ngũ giảng viên
-                </a>
-              </li>
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-students">
-                  Học viên tiêu biểu
-                </a>
-              </li>
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-blog">Blog công nghệ</a>
-              </li>
-            </ul>
+            <a href="./Gioithieu.html" class="nav__link">Giới thiệu</a>
           </li>
 
           <li class="menu-contact">
