--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <header class="header" id="mainHeader">
       <h1 class="header__title">CodeCrafted</h1>
       <nav class="header__nav">
-        <a href="./index.html#home" class="nav__link" id="homeLink">
-          Trang chủ
-        </a>
+        <a href="./index.html#" class="nav__link" id="homeLink">Trang chủ</a>
 
         <ul class="nav__list">
           <li class="menu-courses dropdown-wrapper">
@@ -40,25 +38,7 @@
           </li>
 
           <li class="menu-intro">
-            <a href="#" class="nav__link">Giới thiệu</a>
-            <ul class="dropdown">
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-mission">Sứ mệnh & Giá trị</a>
-              </li>
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-teachers">
-                  Đội ngũ giảng viên
-                </a>
-              </li>
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-students">
-                  Học viên tiêu biểu
-                </a>
-              </li>
-              <li class="dropdown-item">
-                <a href="./Gioithieu.html#section-blog">Blog công nghệ</a>
-              </li>
-            </ul>
+            <a href="./Gioithieu.html" class="nav__link">Giới thiệu</a>
           </li>
 
           <li class="menu-contact">
