--- a/admin-index.html
+++ b/admin-index.html
@@ -8,9 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/css/admin-index.css" />
+    <link rel="stylesheet" href="./assets/css/Admin-index.css" />
   </head>
   <body>
+    <div include-html="modal/authHeader.html"></div>
     <header>Trang Quản Trị - Admin Dashboard</header>
 
     <div class="container">
