--- a/index.html
+++ b/index.html
@@ -16,45 +16,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <!-- Header -->
-    <header class="header" id="mainHeader">
-      <h1 class="header__title">CodeCrafted</h1>
-      <nav class="header__nav">
-        <a href="./index.html#" class="nav__link" id="homeLink">Trang chủ</a>
-
-        <ul class="nav__list">
-          <li class="menu-courses dropdown-wrapper">
-            <a href="#" class="nav__link">Khoá học</a>
-            <ul class="dropdown">
-              <li class="dropdown-item">
-                <a href="./khoahoc_laptrinhweb.html">Lập Trình Web</a>
-              </li>
-              <li class="dropdown-item"><a href="#">Phân Tích Dữ Liệu</a></li>
-              <li class="dropdown-item"><a href="#">Thiết Kế UI/UX</a></li>
-              <li class="dropdown-item"><a href="#">JS Căn Bản</a></li>
-              <li class="dropdown-item"><a href="#">Python 101</a></li>
-              <li class="dropdown-item"><a href="#">Tư Duy Lập Trình</a></li>
-            </ul>
-          </li>
-
-          <li class="menu-intro">
-            <a href="./Gioithieu.html" class="nav__link">Giới thiệu</a>
-          </li>
-
-          <li class="menu-contact">
-            <a href="#" class="nav__link">Hỗ trợ</a>
-            <ul class="dropdown">
-              <li class="dropdown-item"><a href="#">Gửi phản hồi</a></li>
-              <li class="dropdown-item"><a href="#">Hỏi đáp</a></li>
-              <li class="dropdown-item"><a href="#">Trung tâm trợ giúp</a></li>
-              <li class="dropdown-item"><a href="#">Fanpage Facebook</a></li>
-            </ul>
-          </li>
-        </ul>
-        <button id="authBtn" class="btn btn--login">Đăng nhập</button>
-        <div id="authContainer" style="display: inline-block"></div>
-      </nav>
-    </header>
+    <div include-html="modal/authHeader.html"></div>
 
     <!-- Slideshow -->
     <div class="slideshow" id="slide">
@@ -201,33 +163,7 @@
       </section>
     </main>
 
-    <!-- Chân trang -->
-    <footer class="footer">
-      <div class="footer__content">
-        <p class="footer__credit">BY Du Tuan Kiet</p>
-        <p class="footer__follow">Follow us</p>
-        <div class="footer__socials">
-          <a
-            href="https://www.facebook.com/kiet.hi.980"
-            target="_blank"
-            aria-label="Facebook"
-          >
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
-              alt="Facebook"
-              class="footer__social-icon"
-            />
-          </a>
-          <a href="#" target="_blank" aria-label="Instagram">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
-              alt="Instagram"
-              class="footer__social-icon"
-            />
-          </a>
-        </div>
-      </div>
-    </footer>
+    <div id="authContainer" include-html="./modal/authModal.html"></div>
 
     <!-- Modal Popup khoá học -->
     <div
